<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sel_lv_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lslv_item_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            android:text="@string/lang_def"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lslv_item_lang_display" />

        <TextView
            android:id="@+id/lslv_item_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/country_def"
            app:layout_constraintStart_toEndOf="@+id/lslv_item_lang"
            app:layout_constraintTop_toTopOf="@+id/lslv_item_lang" />

        <TextView
            android:id="@+id/lslv_item_lang_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/lang_def"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lslv_item_country_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/country_def"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/lslv_item_lang_display"
            app:layout_constraintTop_toTopOf="@+id/lslv_item_lang_display" />

        <TextView
            android:id="@+id/lslv_item_ltag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/lang_tag_def"
            android:textColor="#5F5F5F"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/lslv_item_country_display"
            app:layout_constraintStart_toEndOf="@+id/lslv_item_country_display" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>